<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:id="@+id/bg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateTime"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="10sp"
            />

    </RelativeLayout>


    <TextView
        android:id="@+id/tweetContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/sampleText"
        android:textColor="@color/dark"
        android:layout_marginVertical="10dp"
        />


</LinearLayout>