<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bright"
        android:padding="5dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/bright"
        android:gravity="center_vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/keywordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keywordHeader"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bright"
        android:layout_marginTop="1dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg"
            android:scaleType="centerCrop"
            android:alpha="0.6"
            android:gravity="center"
            android:paddingVertical="30dp"
            />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="50dp"
            >


            <LinearLayout
                android:id="@+id/keywordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="25dp"
                android:visibility="visible"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keywordTitle"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keyDesc"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    />

                <EditText
                    android:id="@+id/keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/keyword"
                    android:backgroundTint="@color/colorAccent"
                    />


                <Button
                    android:id="@+id/compareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/compare"
                    android:textColor="@color/bright"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="12sp"
                    android:paddingHorizontal="20dp"
                    />

                <EditText
                    android:id="@+id/comKeyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/keyword"
                    android:backgroundTint="@color/colorAccent"
                    android:visibility="gone"
                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    >

                    <Button
                        android:id="@+id/cancelBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/colorPrimary"
                        android:background="@color/bright"
                        android:layout_marginRight="10dp"
                        android:outlineProvider="none"/>

                    <Button
                        android:id="@+id/okBtn"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ok"
                        android:textColor="@color/colorAccent"
                        android:background="@color/bright"
                        android:outlineProvider="none"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="50dp"
            android:visibility="gone"
            >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:indeterminateDrawable="@drawable/cpb"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/predicting"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="40dp"
                />


        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_alignBottom="@id/layout"
            />

    </RelativeLayout>



</LinearLayout>