<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bright"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:src="@drawable/logo_hori"
        />

    <LinearLayout
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:orientation="horizontal"
        android:background="@drawable/input"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_person_black_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            >
        </ImageView>


        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10sp"
            android:background="@null"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:background="@drawable/input"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_email_black_24dp"
            android:layout_marginLeft="2dp"
            android:backgroundTint="@color/colorPrimaryDark"
            >
        </ImageView>


        <EditText
            android:id="@+id/newuser"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10sp"
            android:background="@null"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:background="@drawable/input"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_lock_black_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginLeft="2dp"
            >
        </ImageView>


        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10sp"
            android:background="@null"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:background="@drawable/input"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_lock_outline_black_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginLeft="2dp"
            >
        </ImageView>


        <EditText
            android:id="@+id/retypePass"
            android:inputType="textPassword"
            android:hint="@string/retypePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10sp"
            android:background="@null"
            />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="110dp"
        android:layout_marginLeft="110dp"
        android:id="@+id/signUpBtn"
        android:layout_marginTop="40sp"
        android:text="@string/signup"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/button"
        android:textColor="@color/bright"
        android:textSize="15sp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/cpb"
        android:layout_marginTop="40sp"
        android:visibility="gone"
        />



    <TextView
        android:id="@+id/loginlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLink"
        android:layout_marginTop="20sp"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        />

</LinearLayout>