<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bright"
        android:padding="5dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/usernameHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/bright"
        android:gravity="center_vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/keywordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bright"
        android:layout_marginTop="1dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg"
            android:scaleType="centerCrop"
            android:alpha="0.6"
            android:gravity="center"
            android:paddingVertical="30dp"
            />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="50dp"
            >


            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="visible"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_person_black_24dp"
                        android:layout_marginRight="20dp"/>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingVertical="15dp">

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/colorAccent"
                            />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/colorAccent"
                            android:layout_centerVertical="true"/>


                        <TextView
                            android:id="@+id/keywordNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/defaultNum"
                            android:textColor="@color/colorPrimary"
                            android:layout_alignParentBottom="true"/>

                        <TextView
                            android:id="@+id/keywordCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/keywordCount"
                            android:textColor="@color/colorAccent"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="25dp"/>

                    </RelativeLayout>

                </LinearLayout>



                <Button
                    android:id="@+id/changePassBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changePass"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/bright"
                    android:layout_gravity="end"
                    android:outlineProvider="none"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_alignBottom="@id/layout"
            />



    </RelativeLayout>


</LinearLayout>