<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:id="@+id/background">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/bright"
            android:padding="5dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                >
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@color/bright"
            android:gravity="center_vertical"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/keywordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailsTitle"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:textAllCaps="true"
                />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bright"
        android:layout_marginTop="1dp"
        android:gravity="top"
        android:orientation="vertical"
        >


        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                app:tabGravity="fill"
                app:tabTextColor="@color/grey"
                app:tabSelectedTextColor="@color/colorAccent"
                app:tabBackground="@color/bright"
                app:tabIndicatorColor="@color/colorPrimary"
                >

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/barChartTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bar"/>

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/pieChartTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pie"/>


            </com.google.android.material.tabs.TabLayout>



        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>



    </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutHide"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/bright"
            android:visibility="gone"/>
    </RelativeLayout>

</LinearLayout>